# stackcollapse-ghc

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.md  README.md  stack-8.10.1.yaml  stack-8.10.2.yaml  stack-8.10.3.yaml  stack-8.10.4.yaml  stack-8.6.5.yaml  stack-8.8.2.yaml  stack-8.8.3.yaml  stackcollapse-ghc.cabal
app/: CallTree.hs  CallTreeBuilder.hs  Config.hs  Format.hs  Main.hs  Orphans.hs  Profiles.hs  StackCollapse.hs  Trace.hs  UserModule.hs
examples/prog/: Main.hs  package.yaml  profile.sh  prog.cabal  stack.yaml
examples/prog/app/: Main.hs
examples/prog/src/: Example.hs
src/: CallTreeBuilder.hs  Config.hs  Format.hs  Orphans.hs  Profiles.hs  StackCollapse.hs  UserModule.hs
test/: Helpers.hs  Spec.hs
test/.golden/countSemiprimes--time/: golden
test/.golden/countSemiprimes-p--alloc+Example/: golden
test/.golden/countSemiprimes-p--time+Example/: golden
test/.golden/errors--time/: golden
test/.golden/malformed-bytes-p--time/: golden
test/.golden/malformed-file-p--alloc/: golden
test/.golden/malformed-file-p--time/: golden
test/.golden/no-header--time/: golden
test/.golden/no-ticks-p--time/: golden
test/.golden/no-totals-p--time/: golden
test/.golden/semiprimes--alloc+Example/: golden
test/.golden/semiprimes--time/: golden
test/.golden/semiprimes--time+Example/: golden
test/.golden/semiprimes--time--no-qualified+Example/: golden
test/.golden/semiprimes--time--source-user+Example/: golden
test/.golden/semiprimes-p--time/: golden
test/.golden/test1--alloc+Lesson11/: golden
test/.golden/test1--time/: golden
test/.golden/test1--time+Lesson11/: golden
test/.golden/test1--time--no-qualified+Lesson11/: golden
test/.golden/test1--time--source-user+Lesson11/: golden
test/.golden/test2-p--alloc+Lesson11/: golden
test/.golden/test2-p--time+Lesson11/: golden
test/.golden/unicode-p--alloc--source-always/: golden
test/.golden/unicode-p--time--no-qualified/: golden
test/.golden/unicode-p--time--source-always/: golden
test/prof_files/: countSemiprimes.prof  errors.prof  malformed-bytes.prof  malformed-file.prof  malformed-ticks.prof  no-header.prof  no-ticks.prof  no-totals.prof  no_data.prof  no_header.prof  semiprimes.prof  test1.prof  test2.prof  test3.prof
